--- a/index.html
+++ b/index.html
@@ -205,14 +205,19 @@
             <div id="battle-msg" style="display:none;"></div>
             <div id="log"></div>
             
-            <div id="move-controls" class="controls move-pad">
-    <div></div><button class="btn" onclick="movePlayer('forward')">⬆️ 前進</button><div></div>
-    <button class="btn" onclick="turnPlayer('left')">🔄 左を向く</button>
-    <button class="btn" onclick="openCamp('dungeon')">⛺ メニュー</button>
-    <button class="btn" onclick="turnPlayer('right')">🔃 右を向く</button>
-    <div></div><button class="btn" onclick="movePlayer('backward')">⬇️ 後退</button>
-    <button id="btn-return" class="btn" style="display:none; color:#ff0; font-size:0.8em; padding:0;" onclick="returnToTown()">🏠 戻る</button>
-</div>
+           <div id="move-controls" class="controls move-pad">
+                <div></div>
+                <button class="btn" onclick="movePlayer('forward')">⬆️ 前進</button>
+                <button class="btn" onclick="checkArea()">🔍 調べる</button>
+
+                <button class="btn" onclick="turnPlayer('left')">🔄 左を向く</button>
+                <button class="btn" onclick="openCamp('dungeon')">⛺ メニュー</button>
+                <button class="btn" onclick="turnPlayer('right')">🔃 右を向く</button>
+
+                <div></div>
+                <button class="btn" onclick="movePlayer('backward')">⬇️ 後退</button>
+                <button id="btn-return" class="btn" style="display:none; color:#ff0; font-size:0.8em; padding:0;" onclick="returnToTown()">🏠 戻る</button>
+            </div>
             
             <div id="battle-controls" class="controls battle-pad" style="display:none;">
     <button class="btn btn-atk" onclick="fight('attack')">⚔️ 攻撃</button>
