--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 
     <div id="temple-scene" style="display: none;">
-        <div class="screen-box" style="border-color: #33ffff; max-width: 600px;">
+        <div class="screen-box" style="border-color: #33ffff; max-width: 600px; max-height: 90vh; overflow-y: auto;">
             <h2>🔮 転職の神殿</h2>
             <p style="font-size:0.8em; color:#aaa;">魂を磨く者を選んでください</p>
             
@@ -241,6 +241,7 @@
                 <button class="btn" id="btn-target-0">Target 1</button>
                 <button class="btn" id="btn-target-1">Target 2</button>
                 <button class="btn" id="btn-target-2">Target 3</button>
+                <button class="btn" id="btn-target-3">Target 4</button>
                 <button class="btn" onclick="toggleControls('spell')" style="grid-column:1/-1;">戻る</button>
             </div>
         </div>
