--- a/index.html
+++ b/index.html
@@ -166,16 +166,64 @@
     </div>
 
     <div id="camp-overlay" style="display: none;">
-        <div class="screen-box">
-            <h2>⛺ メニュー</h2>
-            <div style="display:grid; gap:10px;">
-                <button class="btn" onclick="openCampSpellMenu()">⚡ 呪文を使う</button>
-                <button class="btn" onclick="openEquipMenu()">⚔️ 装備変更</button>
-                <button class="btn" onclick="openItemMenu()">💊 アイテムを使う</button>
-                <button class="btn" onclick="openStatusMenu()">📊 強さを見る</button>
-                <button class="btn" id="btn-camp-check" onclick="checkAreaCamp()" style="display:none;">🔍 足元を調べる</button>
-<button class="btn" onclick="saveGame()" style="border-color:#fa0; color:#ffeb3b;">💾 セーブする</button>
-                <button class="btn" onclick="closeCamp()">↩️ 戻る</button>
+        <div class="camp-container">
+            <div class="camp-header">
+                <div class="camp-title-group">
+                    <h2>⛺ CAMP MENU</h2>
+                    <div id="camp-location" class="camp-location-badge">現在地不明</div>
+                </div>
+                <div class="camp-funds">
+                    <div class="funds-label">FUNDS</div>
+                    <div class="funds-value">💰 <span id="camp-gold-display">0</span> G</div>
+                </div>
+            </div>
+
+            <div class="camp-body">
+                <div class="camp-left-pane">
+                    <div class="pane-title">PARTY STATUS</div>
+                    <div id="camp-char-list" class="camp-char-list">
+                        </div>
+                </div>
+
+                <div class="camp-right-pane">
+                    <div class="pane-title">COMMANDS</div>
+                    <div class="camp-menu-grid">
+                        <button class="camp-btn" onclick="openCampSpellMenu()">
+                            <div class="camp-btn-icon">⚡</div>
+                            <div class="camp-btn-label">SKILL</div>
+                            <div class="camp-btn-sub">魔法・特技</div>
+                        </button>
+                        <button class="camp-btn" onclick="openEquipMenu()">
+                            <div class="camp-btn-icon">⚔️</div>
+                            <div class="camp-btn-label">EQUIP</div>
+                            <div class="camp-btn-sub">装備変更</div>
+                        </button>
+                        <button class="camp-btn" onclick="openItemMenu()">
+                            <div class="camp-btn-icon">💊</div>
+                            <div class="camp-btn-label">ITEM</div>
+                            <div class="camp-btn-sub">道具使用</div>
+                        </button>
+                        <button class="camp-btn" onclick="openStatusMenu()">
+                            <div class="camp-btn-icon">📊</div>
+                            <div class="camp-btn-label">STATUS</div>
+                            <div class="camp-btn-sub">強さ確認</div>
+                        </button>
+                        <button class="camp-btn" onclick="checkAreaCamp()" id="btn-camp-check-new">
+                            <div class="camp-btn-icon">🔍</div>
+                            <div class="camp-btn-label">CHECK</div>
+                            <div class="camp-btn-sub">足元を調べる</div>
+                        </button>
+                        <button class="camp-btn save-btn" onclick="saveGame()">
+                            <div class="camp-btn-icon">💾</div>
+                            <div class="camp-btn-label">SAVE</div>
+                            <div class="camp-btn-sub">記録する</div>
+                        </button>
+                    </div>
+                    
+                    <button class="camp-close-btn" onclick="closeCamp()">
+                        ↩️ メニューを閉じる
+                    </button>
+                </div>
             </div>
         </div>
     </div>
