--- a/index.html
+++ b/index.html
@@ -190,32 +190,32 @@
                     <div class="camp-menu-grid">
                         <button class="camp-btn" onclick="openCampSpellMenu()">
                             <div class="camp-btn-icon">⚡</div>
-                            <div class="camp-btn-label">SKILL</div>
+                            <div class="camp-btn-label">スキル</div>
                             <div class="camp-btn-sub">魔法・特技</div>
                         </button>
                         <button class="camp-btn" onclick="openEquipMenu()">
                             <div class="camp-btn-icon">⚔️</div>
-                            <div class="camp-btn-label">EQUIP</div>
+                            <div class="camp-btn-label">装備</div>
                             <div class="camp-btn-sub">装備変更</div>
                         </button>
                         <button class="camp-btn" onclick="openItemMenu()">
                             <div class="camp-btn-icon">💊</div>
-                            <div class="camp-btn-label">ITEM</div>
+                            <div class="camp-btn-label">アイテム</div>
                             <div class="camp-btn-sub">道具使用</div>
                         </button>
                         <button class="camp-btn" onclick="openStatusMenu()">
                             <div class="camp-btn-icon">📊</div>
-                            <div class="camp-btn-label">STATUS</div>
+                            <div class="camp-btn-label">ステータス</div>
                             <div class="camp-btn-sub">強さ確認</div>
                         </button>
                         <button class="camp-btn" onclick="checkAreaCamp()" id="btn-camp-check-new">
                             <div class="camp-btn-icon">🔍</div>
-                            <div class="camp-btn-label">CHECK</div>
+                            <div class="camp-btn-label">調べる</div>
                             <div class="camp-btn-sub">足元を調べる</div>
                         </button>
                         <button class="camp-btn save-btn" onclick="saveGame()">
                             <div class="camp-btn-icon">💾</div>
-                            <div class="camp-btn-label">SAVE</div>
+                            <div class="camp-btn-label">セーブ</div>
                             <div class="camp-btn-sub">記録する</div>
                         </button>
                     </div>
