--- a/index.html
+++ b/index.html
@@ -301,6 +301,12 @@
             タップして閉じる
         </div>
     </div>
+    <script src="data_constants.js"></script>
+    <script src="data_items.js"></script>
+    <script src="data_jobs.js"></script>
+    <script src="data_dungeons.js"></script>
+    <script src="data_maps.js"></script>
+    
     <script src="game.js"></script>
 </body>
 </html>
